--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ minecraft_version=1.20.1
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
 # as they do not follow standard versioning conventions.
-minecraft_version_range=[1.20.1,1.21)
+minecraft_version_range=[1.20.1]
 # The Forge version must agree with the Minecraft version to get a valid artifact
 forge_version=47.3.12
 # The Forge version range can use any version of Forge as bounds or match the loader version range
@@ -42,18 +42,18 @@ mapping_version=1.20.1
 
 # The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
 # Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=checkpoints_mod
+mod_id=checkpoints
 # The human-readable display name for the mod.
-mod_name=Checkpoints Mod
+mod_name=Checkpoints
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0.3-1.20.1
+mod_version=1.0.4-1.20.1
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=foundation.kurai.save-mod
+mod_group_id=foundation.kurai.mc.mods.checkpoints
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=knownout
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=This mod redesigns the save system in the game, adding the ability to save certain states of the world as individual points
+mod_description=Create, manage, and restore checkpoints seamlessly, ensuring your progress is always safe
